# workspace-agent

./: .env.example  .gitignore  DECISIONS.md  README.md  agent.py  pyproject.toml
src/workplace_agent/: __init__.py  cli.py  config.py  logging_setup.py
src/workplace_agent/agent/: __init__.py  loop.py  prompts.py  summary.py
src/workplace_agent/llm/: __init__.py  agent_response.py  client.py  fake.py  types.py
src/workplace_agent/mock_api/: errors.py  server.py  state.py
src/workplace_agent/mock_api/routers/: calendar.py  email.py  jira.py  slack.py
src/workplace_agent/mock_api/schemas/: calendar.py  email.py  jira.py  slack.py
src/workplace_agent/mock_api/seeds/: calendar.json  email.json  jira.json  slack.json
src/workplace_agent/tools/: __init__.py  _http.py  calendar.py  email.py  jira.py  registry.py  slack.py
tests/: conftest.py
tests/integration/: test_scenarios.py
tests/unit/: test_agent_loop.py  test_agent_summary.py  test_calendar_router.py  test_cli.py  test_config.py  test_email_router.py  test_errors.py  test_jira_router.py  test_llm_client.py  test_llm_fake.py  test_llm_types.py  test_logging_setup.py  test_seed_loader.py  test_server.py  test_slack_router.py  test_smoke.py  test_state.py  test_tool_registry.py  test_tools_calendar.py  test_tools_default_registry.py  test_tools_email.py  test_tools_http.py  test_tools_jira.py  test_tools_slack.py
